# BGPoQUIC_socket_api

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  patch_linked_list.picoquic.patch  tail_ref.patch
cmake/: FindFDUSERDATA.cmake  FindVPOLL.cmake
docs/: Doxyfile.in
examples/: CMakeLists.txt
examples/conn_migration/: CMakeLists.txt  client.c  cut_link.sh  server.c  setup.sh
examples/ndp/: CMakeLists.txt  client.c  common_ndp.h  ndp.c  setup.sh
include/: CMakeLists.txt
include/quic_sock/: msquic_sock_api.h  picoquic_sock_api.h  sock_api_common.h
src/: CMakeLists.txt  quic_sock.h
src/common/: CMakeLists.txt  util_common_sock.c  util_common_sock.h  util_data_buffer.c  util_data_buffer.h  util_eventfd.c  util_eventfd.h  util_queue.c  util_queue.h  util_ref.c  util_ref.h  util_sock_mgr.c  util_sock_mgr.h  util_var_sem.c  util_var_sem.h  util_wait_queue.c  util_wait_queue.h
src/common/ring-buffer/: webrtc_ring_buf.c  webrtc_ring_buf.h
src/msquic_api/: CMakeLists.txt  msquic_sock.h  msquic_sock_api.c
src/picoquic/: CMakeLists.txt  picoquic_sock.h  picoquic_sock_api.c
tests/: CMakeLists.txt  echo_server.py  simple_client.py  test_buffer.c  test_buffer.h  test_eventfd.c  test_eventfd.h  test_main.c  test_main.h  test_msquic_sock_api.c  test_msquic_sock_api.h  test_picoquic_sock_api.c  test_picoquic_sock_api.h  test_queue.c  test_queue.h  test_quic_sock_api_common.c  test_quic_sock_api_common.h  test_suites.c  test_suites.h
tests/go_client/: go.mod  go.sum  go_simple_client.go
